--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,32 @@
-version: "3.9"
-
 services:
-  # ── PostgreSQL Database ──────────────────────────────────────────────────────
-  db:
-    image: postgres:16-alpine
-    container_name: msiem_db
-    environment:
-      POSTGRES_USER: msiem
-      POSTGRES_PASSWORD: msiem_dev_password
-      POSTGRES_DB: msiem_simulator
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./docker/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U msiem"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-
-  # ── Redis Cache & Pub/Sub ────────────────────────────────────────────────────
-  redis:
-    image: redis:7-alpine
-    container_name: msiem_redis
-    command: redis-server --save 60 1 --loglevel warning
-    volumes:
-      - redis_data:/data
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-
-  # ── FastAPI Backend ──────────────────────────────────────────────────────────
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: msiem_backend
-    environment:
-      DATABASE_URL: postgresql://msiem:msiem_dev_password@db:5432/msiem_simulator
-      REDIS_URL: redis://redis:6379
-      SECRET_KEY: dev-secret-key-change-in-production
-      ENVIRONMENT: development
-      CORS_ORIGINS: "http://localhost:3000"
-    volumes:
-      - ./backend:/app
-      - ./scenarios:/app/scenarios
-      - ./data:/app/data
     ports:
       - "8000:8000"
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - ./backend:/app
+    environment:
+      - ENVIRONMENT=development
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # ── React Frontend ───────────────────────────────────────────────────────────
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: msiem_frontend
-    environment:
-      VITE_API_URL: http://localhost:8000
-      VITE_WS_URL: ws://localhost:8000
+    ports:
+      - "5173:5173"
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    ports:
-      - "3000:3000"
+    environment:
+      - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
-    command: npm run dev -- --host 0.0.0.0
     restart: unless-stopped
-
-volumes:
-  postgres_data:
-  redis_data:
